# rust-dex

./: .env  Cargo.toml  howtostart.md  package-lock.json  package.json
assets/: list.json  list2.json
public/: index.html  index.tsx  like_button.js  tileName.js  tileName.tsx
react-project/: index.html  index.js  like_button.js  tileName.jsx
react-project/components/: poketile.js
src/: main.rs  models.rs  schema.rs
src/json/: abilities-planning.txt  abilities.json  abilities2.json  list2.json
src/src/: schema.rs
web/webpack-starter/: package-lock.json  package.json
web/webpack-starter/config/webpack/: base.js
web/webpack-starter/src/: index.html  index.tsx
web/webpack-starter/src/components/: fetchdata.tsx  getPokemon.tsx  model.tsx  namefromRust.tsx  pkentries.tsx  pokeTile.tsx  pokedex.tsx  tileName.tsx
