[package]
name = "hello-rust"
version = "0.1.0"
authors = ["carlykaras <carly.karas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["serve", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"